# Geant4Web

./: README.md
.github/workflows/: build-deploy.yml  validate.yml
engine/: CMakeLists.txt  setup_env.js
engine/include/: Actions.hh  DetectorConstruction.hh  PhysicsList.hh  PrimaryGenerator.hh  SimConfig.hh  SimEngine.hh
engine/src/: Actions.cc  DetectorConstruction.cc  PrimaryGenerator.cc  SimEngine.cc  native_main.cpp  wasm_bindings.cpp
scripts/: build_app_wasm.sh  build_geant4_wasm.sh  build_native.sh  slim_datasets.py
scripts/wsl/: run_sim.sh  start_web.sh
validation/: run_matrix.py
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/src/: broaden.ts  main.ts  plot.ts  presets.ts  types.ts  view3d.ts  worker.ts
